@@ -13,6 +13,7 @@
     "NepgearsyHUDRebornMenu/Buttons/HUD/MinimapSize" : "Размер миникарты",
     "NepgearsyHUDRebornMenu/Buttons/HUD/MinimapZoom" : "Масштаб миникарты",
     "NepgearsyHUDRebornMenu/Buttons/HUD/Trackers" : "Включить трекеры",
+    "NepgearsyHUDRebornMenu/Buttons/HUD/TrueAmmo" : "Enable the True Ammo feature",
     "NepgearsyHUDRebornMenu/Buttons/HUD/Scale" : "Размер HUD'а",
     "NepgearsyHUDRebornMenu/Buttons/HUD/Spacing" : "Интервал элементов HUD'а",
 
@@ -29,6 +30,7 @@
     "NepgearsyHUDRebornMenu/Buttons/Colors/CPColor" : "Цвет панели контроля",
     "NepgearsyHUDRebornMenu/Buttons/Colors/HealthColor" : "Цвет шкалы здоровья",
     "NepgearsyHUDRebornMenu/Buttons/Colors/ShieldColor" : "Цвет шкалы брони",
+	"NepgearsyHUDRebornMenu/Buttons/Colors/ObjectiveColor" : "Objective Icon Color",    
 
     "NepgearsyHUDRebornMenu/Buttons/Close" : "Закрыть",
 
