@@ -40,6 +40,7 @@
             <option type="number" min="150" max="200" default_value="150" name="MinimapSize"/>
             <option type="number" min="0.25" max="1" step="0.01" default_value="1" name="MinimapZoom"/>
             <option type="bool" default_value="true" name="EnableTrackers"/>
+            <option type="bool" default_value="false" name="EnableTrueAmmo"/>
             <option type="number" min="0.1" max="1.5" default_value="0.8" name="Scale"/>
             <option type="number" min="0.1" max="1" default_value="0.95" name="Spacing"/>
 
@@ -51,6 +52,7 @@
             <option type="number" default_value="1" name="CPColor"/>
             <option type="number" default_value="2" name="HealthColor"/>
             <option type="number" default_value="1" name="ShieldColor"/>
+            <option type="number" default_value="1" name="ObjectiveColor"/>
             
         </options>
     </Options>
@@ -98,6 +100,8 @@
         <texture path="NepgearsyHUDReborn/HUD/AI"/>
         <texture path="NepgearsyHUDReborn/HUD/Teammate"/>
         <texture path="NepgearsyHUDReborn/HUD/CivilianKilled"/>
+        <texture path="NepgearsyHUDReborn/HUD/SystemMessageIcon"/>
+        <texture path="NepgearsyHUDReborn/HUD/ObjectiveSquare"/>
         
         <texture path="NepgearsyHUDReborn/Minimap/kenaz_loc_b_df"/>
         <texture path="NepgearsyHUDReborn/Minimap/mus_1"/>
