@@ -2,3 +2,8 @@
 - Added Russian localization.
 - Added the Wave panel (safe house raid)
 - Added the buff panel (Captain Winters shield buff)
+- Added a new icon for System Messages, and Objectives. The objective icon's color is customizable in the options.
+- Fixed an issue with non-infamous player names overlapping their avatar.
+- Made a new look for the weapon panel!
+- Added the True Ammo option. [This was a request!]
+- Updated the objective panel.
